--- a/index.html
+++ b/index.html
@@ -39,12 +39,20 @@
           <li>React</li>
           <li>Node.js</li>
         </ul>
-
-        <ul id="ingredients"></ul>
-
-        <ul class="gallery"></ul>
       </li>
     </ul>
+
+    <ul id="ingredients"></ul>
+
+    <ul class="gallery"></ul>
+
+    <ul>
+  <li>First item</li>
+  <li>Second item</li>
+  <li>Third item</li>
+  <li>Fourth item</li>
+  <li>Fifth item</li>
+</ul>
     <script src="./js/javaScript.js"></script>
   </body>
 </html>
